# Ember

./: .gitignore  CMakeLists.txt  build.sh  run.sh
include/: Application.h  Camera.h  EBO.h  Entity.h  Mesh.h  PhysicsSystem.h  RenderSystem.h  Shader.h  VAO.h  VBO.h  World.h
shaders/: frag.glsl  vert.glsl
src/: Application.cpp  Camera.cpp  EBO.cpp  Entity.cpp  Mesh.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
